# bookr

./: .aliases  .gitignore  Makefile  README.md  Vagrantfile  pyproject.toml
bookr_server/: dash_proto.py
bookr_server/bookr/: settings.py  urls.py
bookr_server/dash_components/: bar_chart.py  ids.py  layout.py  nation_dropdown.py
bookr_server/reviews/: dash_proto.py  models.py  urls.py  views.py
bookr_server/reviews/migrations/: 0001_initial.py  0002_book_contributor_review_bookcontributor_and_more.py
bookr_server/reviews/templates/: base.html
bookr_server/templates/: base.html
bookr_server/templates/reviews/: dash-proto.html  search-results.html
doc/: conf.py  getting-started.rst  index.rst
doc/apps/: index.rst
doc/apps/bookr/: models.rst
doc/apps/global/: models.rst
doc/references/: api-doc.rst  doc-cheat-sheet.rst  environment-setup.rst  index.rst  project_setup.md  pycharm-setup.rst
src/bookr/bookr/: settings.py
