[project]
name = "bookr"
version = "1.0"
description = ""
authors = [
    {name = "Laurent Brack", email = "laurent.brack@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.26.4",
    "django-extensions>=3.2.3",
    "Babel>=2.12.1",
    # see https://stackoverflow.com/questions/76350371/i-upgraded-to-django-4-2-1-and-django-plotly-dash-is-not-working-anymore-wrapp
    # Regarding the Dash issue
    "dash>=2.0,<2.10",
#    "dash>=2.13.0",
    "dash-bootstrap-components>=1.4.2",
    "pandas>=2.0.3",
    "pandas-stubs>=2.0.2.230605",
    "plotly>=5.16.1",
    "python-i18n>=0.3.9",
    "django-plotly-dash>=2.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
dev = [
    "Ipython>=7.16.3",
]
doc = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-click>=5.0.1",
    "sphinxcontrib-images>=0.9.4",
    "setuptools>=68.1.2",
]
lint = [
    "black>=23.7.0",
    "flake8>=5.0.4",
]
django = [
    "pygraphviz>=1.11",
]
